--- a/html_n_css/html.html
+++ b/html_n_css/html.html
@@ -13,23 +13,25 @@
         <li><a href="jobs.html">Jobs</a></li>
       </ul>
     </nav>
-    <header><h1>Hello, my name is billy!</h1></header>
-    <img src="Image.jpg" alt="pic of billy" height="50%" width="50%">
+    <header>
+      <h1>Hello, my name is billy!</h1>
+      <img src="Image.jpg" alt="pic of billy" height="50%" width="50%">
+    </header>
     <div id="blogflex">
-    <section>
-      <h2>Billy going to staiths</h2>
-      <p>fire!</p>
-      <img src="staiths.jpg" alt="" height="80%" width="80%">
-    </section>
-    <aside>
-      <figure>
-        <img src="reece.jpg" alt="" height="25%" width="25%">
-        <h3 id="reece">Reece Jones</h3>
-        <p>I love my little man</p>
-        <p><a href="mailto:reece.c.jones@gmailcom">Msg me</a></p>
-      </figure>
-    </aside>
-  </div>
+      <section>
+        <h2>Billy going to staiths</h2>
+        <p>fire!</p>
+        <img id="staithsImg" src="staiths.jpg" alt="staiths fire place">
+      </section>
+      <aside>
+        <figure>
+          <img src="reece.jpg" alt="mugShot" height="25%" width="25%">
+          <h3 id="reece">Reece Jones</h3>
+          <p>I love my little man</p>
+          <p><a href="mailto:reece.c.jones@gmailcom">Msg me</a></p>
+        </figure>
+      </aside>
+    </div>
     <footer>
       <ul>
         <li><a href="html.html">Home</a></li>
